<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context="com.ms.thsensordriver.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/th_sensor_driver"
        android:textColor="@color/white"
        android:textSize="@dimen/font_large"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textStyle="bold"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="left">
        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/temperature"
                android:textColor="@color/white"
                android:textSize="@dimen/font_medium"
                android:textAlignment="textEnd"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/temperature"
                android:background="@color/white"
                android:textColor="@color/dark_grey"
                android:textAlignment="center"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:padding="2dp"
                tools:text="90 F"/>
        </TableRow>
        <TableRow android:layout_marginTop="8dp">
            <TextView
                android:text="@string/humidity"
                android:textColor="@color/white"
                android:textSize="@dimen/font_medium"
                android:textAlignment="textEnd"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/humidity"
                android:background="@color/white"
                android:textColor="@color/dark_grey"
                android:textAlignment="center"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:padding="2dp"
                tools:text="60%"/>
        </TableRow>
        <TableRow android:layout_marginTop="8dp">
            <TextView
                android:text="@string/activity"
                android:textColor="@color/white"
                android:textSize="@dimen/font_medium"
                android:textAlignment="textEnd"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/activity"
                android:background="@color/white"
                android:textColor="@color/dark_grey"
                android:textAlignment="center"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:padding="2dp"
                tools:text="231"/>
        </TableRow>
        <TableRow android:layout_marginTop="22dp">
            <TextView
                android:text="@string/number_of_readings"
                android:textColor="@color/white"
                android:textSize="@dimen/font_medium"
                android:textAlignment="textEnd"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/number_of_readings"
                android:background="@color/white"
                android:textColor="@color/dark_grey"
                android:textAlignment="center"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:padding="2dp"
                android:layout_gravity="center_vertical"
                tools:text="20"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:background="@drawable/green_button"
            android:textColor="@color/white"
            android:textSize="@dimen/font_medium"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"/>
        <Button
            android:id="@+id/cancel"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/red_button"
            android:textColor="@color/white"
            android:textSize="@dimen/font_medium"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output"
        android:textColor="@color/white"
        android:textSize="@dimen/font_medium"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:divider="@null"
            android:dividerHeight="0dp"
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_grey">
        </ListView>
    </LinearLayout>

</LinearLayout>